# Noesis-Agent

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  pyrightconfig.json
config/: config.example.toml  config.toml  models.toml
config/strategies/: r_breaker.toml  template.toml
docs/: architecture.html
docs/plans/: 2026-03-20-strategy-evolution-system.md  2026-03-21-phase-1-2-implementation.md  2026-03-21-phase-3-core-agents.md  2026-03-21-qporter-v2-architecture.md  2026-03-22-openai-oauth.md  2026-03-23-noesis-chat.md  2026-03-23-prompt-versioning-design.md  2026-03-23-prompt-versioning.md  2026-03-24-chat-ux-improvements.md
scripts/: compare_fees.py  seed_backtest.py
src/noesis_agent/: bootstrap.py  cli.py
tests/unit/: test_agent_models.py  test_agent_types.py  test_alerts.py  test_analyst_agent.py  test_backtest_engine.py  test_bootstrap.py  test_chat_agent.py  test_chat_session.py  test_cli.py  test_cli_chat.py  test_config.py  test_core_enums.py  test_core_models.py  test_data_adapter.py  test_data_binance.py  test_data_collector.py  test_data_ingestion.py  test_data_storage.py  test_emergency.py  test_execution_base.py  test_factor_analysis.py  test_factor_registry.py  test_gates.py  test_logging.py  test_memory.py  test_model_registry.py  test_monthly_batch.py  test_openai_oauth.py  test_optimize_runner.py  test_orchestrator.py  test_prompt_registry.py  test_proposal_manager.py  test_proposer_agent.py  test_r_breaker.py  test_regime.py  test_scheduler.py  test_skill_registry.py  test_strategy_base.py  test_strategy_catalog.py  (+1 more)
(+53 files in other folders)
