[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "noesis-agent"
version = "0.1.0"
description = "AI-native crypto trading agent — a self-evolving research and execution system."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Ethan" },
]
keywords = ["crypto", "trading", "ai", "agent", "quantitative"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "typer[all]>=0.15",
    "pydantic-ai>=1.0,<2.0",
    "litellm>=1.60,<2.0",
    "httpx>=0.28",
    "authlib>=1.4",
    "pandas>=2.2",
    "TA-Lib>=0.6",
    "ccxt>=4.4",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
optimize = ["optuna>=4.0"]
dev = ["ruff>=0.9", "pytest>=8.0"]

[project.scripts]
noesis = "noesis_agent.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B"]
ignore = ["S101"]
